# Axis

./: .gitignore  CMakeLists.txt  LICENSE
cmake/: stm_arm_gcc.cmake
source/: CMakeLists.txt  main.c
source/bsp/: audio.c  init.c  trace.h
source/bsp/blackpill/: board.c  board.h
source/bsp/discovery/: board.c  board.h  cs43l22.c
source/bsp/shared/: FreeRTOSConfig.h  init.c
source/dae/: dae.c  dae.h  midi.c  midi.h
source/ui/: ui.c
